[package]
authors = ["github.scott@gmail.com"]
edition = "2021"
name = "rbasefind"
version = "0.3.0"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.8"
fnv = "1.0.7"
log = "0.4.29"
memmap2 = "0.9"
rayon = "1.10"
regex = "1.12.2"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "warn"
